[package]
name = "polkavm-assembler"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Runtime assembler for PolkaVM"

[dependencies]
log = { workspace = true }

[features]
default = []
alloc = []

[lints]
workspace = true
