[package]
name = "polkatool"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A swiss knife toolkit for PolkaVM"

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
polkavm = { workspace = true }
polkavm-common = { workspace = true }
polkavm-disassembler = { workspace = true, optional = true }
polkavm-linker = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["disassembler"]
jemalloc = ["dep:tikv-jemallocator"]
disassembler = ["dep:polkavm-disassembler"]
